# HIDSTM32F4

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  MouseWiggle Debug Active.launch  MouseWiggle.ioc  build-clean.sh  build-cmake.sh  build_mouse.sh  mousewiggle.cmake
Core/: CMakeLists.txt
Core/Inc/: bt.hpp  bt_api.h  bt_cmds.h  main.h  ncerr.h  oled_io.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tasks.h  uart.h  uart_priv.hpp
Core/Src/: bt.cpp  bt_api.cpp  helloworld.cpp  main.c  oled_io.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tasks.cpp  uart.cpp
Drivers/: CMakeLists.txt
Drivers/CMSIS/: CMakeLists.txt
IO/: CMakeLists.txt
IO/inc/: bitmasks.h  oled_io.h  ssd1306.h
IO/src/: ssd1306.c
Tasks/: CMakeLists.txt
Tasks/inc/: tasks.h
Tasks/src/: tasks.cpp
tools/: flash_bootloader_app.ocd  openocd-stlink.ocd
